--- a/TpRails/Gemfile
+++ b/TpRails/Gemfile
@@ -23,6 +23,14 @@ gem 'jbuilder', '~> 2.0'
 # bundle exec rake doc:rails generates the API under doc/api.
 gem 'sdoc', '~> 0.4.0', group: :doc
 
+gem 'mongodb'
+
+gem 'mongoid','4.0.1'
+
+gem 'moped','2.0.2'
+
+gem 'bson' ,'~> 2.2'
+
 # Use ActiveModel has_secure_password
 # gem 'bcrypt', '~> 3.1.7'
 
